--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -21,6 +21,9 @@ jobs:
         with: 
           python-version: 3.9.2
 
+      - name: Install requirements
+        run: pip install -r requirements.txt
+
       - name: Execute CSV reader script
         run: |
           python csvReader.py
