--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Execute data constructor Python script
         run: |
-          python scripts/data_construcor.py
+          python scripts/data_parser.py
         
       - name: Set up git config
         run: |
