--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -22,7 +22,9 @@ jobs:
           python-version: 3.9.2
 
       - name: Install requirements
-        run: pip install -r ./requirements.txt
+        run: |
+          pip install -r ./requirements.txt
+          pip install beautifulsoup4
 
       - name: Execute data constructor Python script
         run: |
